Bug 104016 - FILEOPEN: RTF incorrect bullets indentation and spacing
Summary: FILEOPEN: RTF incorrect bullets indentation and spacing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.2.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords: bibisected, bisected, filter:rtf, regression
: 104084 104745 (view as bug list)
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2016-11-18 18:38 UTC by Xisco Faulí
Modified: 2022-09-02 19:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample1 (5.22 KB, application/msword)
2016-11-18 18:38 UTC, Xisco Faulí
Details
comparison sample1 (1.37 MB, application/pdf)
2016-11-18 18:39 UTC, Xisco Faulí
Details
sample2 (6.04 KB, application/msword)
2016-11-18 18:40 UTC, Xisco Faulí
Details
comparison sample2 (1.12 MB, application/pdf)
2016-11-18 18:41 UTC, Xisco Faulí
Details
sample3 (54.07 KB, application/rtf)
2017-07-20 10:09 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-11-18 18:38:21 UTC
Created attachment 128852 [details]
sample1

Steps:
1. Open the attached file
2. Check bullets position 

Observed behaviour: bullets indention and spacing is higher that it should be.

Reproduced in 

Version: 5.3.0.0.alpha1+
Build ID: 757a60d01dd152aadab2ba3c8224252481ce8a88
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; Layout
Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 1 Xisco Faulí 2016-11-18 18:39:46 UTC
Created attachment 128853 [details]
comparison sample1
Comment 2 Xisco Faulí 2016-11-18 18:40:11 UTC
Created attachment 128854 [details]
sample2
Comment 3 Xisco Faulí 2016-11-18 18:41:39 UTC
Created attachment 128855 [details]
comparison sample2
Comment 4 A (Andy) 2016-11-19 07:57:33 UTC
I can confirm this bug also with LO 5.2.3.3 (Win 8.1).  The indentation and the spacing between the bullet and text is increased in LO compared to Word for both sample files.  This is particularly obvious and easy to see in the second sample.
Comment 5 raal 2016-11-24 20:04:54 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna; Could you possibly take a look at this one? Thanks

author	Miklos Vajna <vmiklos@collabora.co.uk>	2016-01-26 12:21:28 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2016-01-26 12:21:54 (GMT)
commit 3915bf2dc877d5f1140798e24933db0f21386a4a (patch)
tree bcc1034371fa11953556b3400f520ee593760727
parent 09e46424c510924bae09c6e0147095e2958fa009 (diff)
tdf#95376 DOCX import: fix incorrectly indented tab stops 
 
 564aeb6b0f7decd2b37eb836f3a86585edc76b8b is the first bad commit
commit 564aeb6b0f7decd2b37eb836f3a86585edc76b8b
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Feb 4 18:25:46 2016 -0800

    source 3915bf2dc877d5f1140798e24933db0f21386a4a
 git bisect log
# bad: [6380ca07b05f68dedcaa379302cfe1fa478571c4] source 60b74fe1775e647545d2da1fcc58a4c63ec18aa5
# good: [1f670510f08cb800cbae2a1dd6ea70d3542e4721] source 49c2b9808df8a6b197dec666dfc0cda6321a4306
git bisect start 'origin/master' 'oldest'
# bad: [38f37b8ec1a2d199bb957cfd2581df7d1b273b74] source c0da1080b61a1d51654fc34fdaeba373226065ff
git bisect bad 38f37b8ec1a2d199bb957cfd2581df7d1b273b74
# good: [6998931a34ad75eb555f882fbed223e585548721] source 1fbd073828ef52f5206aed4643226bae9fb85f4f
git bisect good 6998931a34ad75eb555f882fbed223e585548721
# bad: [b283fbadb387862ea0f09058430317906e1a78b5] source 1fc4cb57755cdfb9ab65c112435997874fb057cd
git bisect bad b283fbadb387862ea0f09058430317906e1a78b5
# good: [46053f8f06492a2c806ebd473883548d4a1115d8] source 3de2c3952b9757c40615194811142fd19a9b72eb
git bisect good 46053f8f06492a2c806ebd473883548d4a1115d8
# bad: [67a60fe21b0a52702588b1337face4a45ea247bf] source 3187193a6142b4b1c974ae1e1de572fa74a3c8ee
git bisect bad 67a60fe21b0a52702588b1337face4a45ea247bf
# bad: [0891028d34a92b73ff4cf8989493b185119c25b9] source 626702aa39798715fd252ae8f484233cae8a829f
git bisect bad 0891028d34a92b73ff4cf8989493b185119c25b9
# bad: [f37d54867e72f854f159f68f685fa704d779f053] source 3f9088bae26c726e0632e626b7f8c3ae3ff457ee
git bisect bad f37d54867e72f854f159f68f685fa704d779f053
# bad: [fbfca52a04ffb0d1e5e275d1e2b5226e307d373b] source 7345aaf69a9d88cde3deabb6818a00938d8ad392
git bisect bad fbfca52a04ffb0d1e5e275d1e2b5226e307d373b
# good: [58f5a99891c2423c119c9cc0755f0c1ad6b84ec8] source 7c151f39144b7401a99c7b736a41e5dce4ac4db1
git bisect good 58f5a99891c2423c119c9cc0755f0c1ad6b84ec8
# bad: [70ff5e5b712a95a4f844ad08e77aaa2e7b21a90e] source 7d9ac365039a23b704738b63a54bbbae6e9f6f3a
git bisect bad 70ff5e5b712a95a4f844ad08e77aaa2e7b21a90e
# good: [2b6606bb7423d3588e08ff6a18176c411cf7df3d] source 09e46424c510924bae09c6e0147095e2958fa009
git bisect good 2b6606bb7423d3588e08ff6a18176c411cf7df3d
# bad: [55b3e608904d03e5644de604dee0de61b76b8add] source 93fdb8dc67bf04c7a1e22c8dd15152212799c4f2
git bisect bad 55b3e608904d03e5644de604dee0de61b76b8add
# bad: [564aeb6b0f7decd2b37eb836f3a86585edc76b8b] source 3915bf2dc877d5f1140798e24933db0f21386a4a
git bisect bad 564aeb6b0f7decd2b37eb836f3a86585edc76b8b
# first bad commit: [564aeb6b0f7decd2b37eb836f3a86585edc76b8b] source 3915bf2dc877d5f1140798e24933db0f21386a4a
Comment 6 raal 2016-11-26 10:59:17 UTC
*** Bug 104084 has been marked as a duplicate of this bug. ***
Comment 7 Xisco Faulí 2016-12-20 11:33:16 UTC
*** Bug 104745 has been marked as a duplicate of this bug. ***
Comment 8 Luke 2016-12-21 05:55:54 UTC
This regression also affects RTF documents. See attachment 129737 [details] / Bug 104745
Comment 9 Luke 2016-12-22 01:27:47 UTC
Bug doc is an RTF file with a .doc extension.
Comment 10 Xisco Faulí 2017-07-20 10:06:05 UTC
it also affects attachment 103955 [details] from bug 82105
Comment 11 Xisco Faulí 2017-07-20 10:09:10 UTC
Created attachment 134745 [details]
sample3

another document affected by the same commit
Comment 12 Xisco Faulí 2017-09-20 08:25:28 UTC
attachment 70021 [details] from bug 57085 is also affected by the same commit
Comment 13 Commit Notification 2017-12-05 12:52:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c9dee880d88305312094b311abdae155e452bf14

tdf#104016 RTF import: deduplicate before text indent from numbering

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2017-12-06 12:39:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=61b7034824dead1635f9e9c6ec996297e10f6910&h=libreoffice-6-0

tdf#104016 RTF import: deduplicate before text indent from numbering

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Xisco Faulí 2017-12-11 12:21:54 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 3af500580b1c82eabd60335c9ebc458a3f68850c
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded