tdf#104016 RTF import: deduplicate before text indent from numbering

We already deduplicated first line indentation since commit
3915bf2dc877d5f1140798e24933db0f21386a4a (tdf#95376 DOCX import: fix
incorrectly indented tab stops, 2016-01-26), the same is necessary for
before text indent.

Change-Id: I11394881d116f76922c1a706dd14b6a7cdf3c89f